[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lungscan"
version = "0.0.1"
description = "Library for lung CT scanning porpuses. Provides features like lung segmentation, diseases detection (e.g. COVID-19), and so on. The project is related to a undergraduate thesis."
authors = [
  { name = "Luan de Souza Silva" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.4"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["lungscan"]
force_sort_within_sections = true
